--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "tests"
   ],
   "devDependencies": {
-    "qunit": "git://github.com/jquery/qunit.git#~1.12.0"
+    "qunit": "git://github.com/jquery/qunit.git#~1.12.0",
+    "grunt": "~0.4.1",
+    "grunt-contrib-qunit": "~0.2.2"
   }
 }
