--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   ],
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-qunit": "~0.2.2"
+    "grunt-contrib-qunit": "~0.2.2",
+    "grunt-cli": "~0.1.9"
   },
   "dependencies": {
     "bower": "~1.1.2"
