--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-qunit": "~0.2.2",
-    "grunt-cli": "~0.1.9"
+    "grunt-cli": "~0.1.9",
+    "lodash": "~1.3.1"
   },
   "dependencies": {
     "bower": "~1.1.2"
