--- a/package.json
+++ b/package.json
@@ -16,7 +16,15 @@
     "grunt": "~0.4.1",
     "grunt-contrib-qunit": "~0.2.2",
     "grunt-cli": "~0.1.9",
-    "lodash": "~1.3.1"
+    "lodash": "~1.3.1",
+    "closure-compiler": "~0.2.1",
+    "uglify-js": "~2.3.6",
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-modernizr": "~0.3.0",
+    "grunt-lodash": "~0.2.0",
+    "grunt-bower-task": "~0.3.1",
+    "grunt-shell": "~0.3.1",
+    "jison": "~0.4.10"
   },
   "dependencies": {
     "bower": "~1.1.2"
