test - add integration tests
Integration tests using CasperJS (and PhantomJS) is now working on
Travis CI.

Also included is a regression-tested bug fix where OR'd statements never
worked.

Other handy notes:

- Screenshots from failing CasperJS tests will get uploaded to my AWS S3
  account. This was invaluable in tracking down a failure in the Grunt
  build pipeline that was upsetting Travis.
- A minified, compiled version of the library is uploaded to my AWS S3
  account if the build is successful.

--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "grunt-bower-task": "~0.3.1",
     "grunt-shell": "~0.3.1",
     "jison": "~0.4.10",
-    "grunt-jquerybuilder": "~0.1.4",
-    "jquery-builder": "~0.5.0"
+    "jquery-builder": "~0.5.0",
+    "phantomjs": "~1.9.1-5",
+    "grunt-casperjs": "~1.0.6"
   },
   "dependencies": {
     "bower": "~1.1.2"
