--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,31 @@ language: node_js
 node_js:
     - "0.10"
 
-before_script:
-    -   bower install
+env:
+    global:
+        - "ARTIFACTS_AWS_REGION=us-east-1"
+        - "ARTIFACTS_S3_BUCKET=travisasim"
+        - secure: "Jr7Pa0TfTa3c866fniYqCXHiWvXsYgv2wzYRQkueMSmuafngV31dcrCjj/0kenUA2R39/ZO/HctF1bl6fz3KfypdPrwUOYYgeECX7r1OKGKc2qHqJzAKaem+B3r+oJaFRY+hKdBc9KL09gkUdGZueOEgoYaAHWGV4XYGl1cTh7I="
+        - secure: "aevPkl+KeTbe9+Du0pyTz1atRtKzI+oU0h9pT7hedQ1bCfUH5ANlnqNs01o1qA0ijDyWlH/ZnfmY4dgTq+MQXnmW+7OLlevrLrwQwlAyv82psNfILYNWQWNB1MVnSD3aYVRX/GBrlUvRBdMJWHZ3fYCv2Fd0WWrzEl7NE1d91T0="
 
-script: grunt test --verbose --force
+before_script:
+    -   git clone git://github.com/n1k0/casperjs.git
+    -   cd casperjs
+    -   git checkout 1.0.3
+    -   cd ..
+    -   sudo ln -sf `pwd`/casperjs/bin/casperjs /usr/local/bin/casperjs
+    -   wget https://phantomjs.googlecode.com/files/phantomjs-1.9.1-linux-i686.tar.bz2
+    -   tar xvf phantomjs-1.9.1-linux-i686.tar.bz2
+    -   sudo ln -sf `pwd`/phantomjs-1.9.1-linux-i686/bin/phantomjs /usr/local/bin/phantomjs
+    -   casperjs --version
+    -   phantomjs --version
+    -   gem install travis-artifacts
+
+after_failure:
+    -   travis-artifacts upload --path build --target-path artifacts/$TRAVIS_BUILD_ID/$TRAVIS_JOB_ID/build
+    -   travis-artifacts upload --path test --target-path artifacts/$TRAVIS_BUILD_ID/$TRAVIS_JOB_ID/test
+
+after_success:
+    -   travis-artifacts upload --path build/tablequery.min.js --target-path artifacts
+
+script: grunt test --verbose
