--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   ],
   "devDependencies": {
     "qunit": "git://github.com/jquery/qunit.git#~1.12.0",
-    "modernizr": "git://github.com/Modernizr/Modernizr.git#2.6.2"
+    "modernizr": "git://github.com/Modernizr/Modernizr.git#2.6.2",
+    "jquery": "git://github.com/components/jquery.git#2.0.3"
   }
 }
