--- a/bower.json
+++ b/bower.json
@@ -16,5 +16,9 @@
     "qunit": "git://github.com/jquery/qunit.git#~1.12.0",
     "modernizr": "git://github.com/Modernizr/Modernizr.git#2.6.2",
     "jquery": "git://github.com/components/jquery.git#2.0.3"
+  },
+  "dependencies": {
+    "moment": "~2.2.1",
+    "moment-range": "~0.1.7"
   }
 }
